Implemented both new endpoints and update root html file

--- a/Assignment 2/WebServer/www/root.html
+++ b/Assignment 2/WebServer/www/root.html
@@ -9,6 +9,11 @@
 			<li>/json -- returns a json of the /random request</a></li>
 			<li>/random -- returns index.html</a></li>
 		</ul>
+		<h3>Newly added endpoints:</h3>
+		<ul>
+			<li><strong>/weather</strong> -- returns the temperature of the location you gave (latitude &amp; longitude coordinates). example: /weather?query=37,-145</li>
+			<li><strong>/bmi</strong> - returns your BMI index given your weight in kilograms and height in meters. example: /bmi?height=1.9&weight=85</li>
+		</ul>
 		<h3>File Structure in www (you can use /file/www/FILENAME):</h3>
 		${links}
 	</body>
